kubernetes/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    name: vault
    purpose: secrets
    team: platform
